k8s/profiles-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-deployment
  labels:
    app: profiles
spec:
  replicas: 2
  selector:
    matchLabels:
      app: profiles
  template:
    metadata:
      labels:
        app: profiles
    spec:
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: profiles
          image: ghcr.io/lucasquin/profiles:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
