k8s/profiles-service.yml
apiVersion: v1
kind: Service
metadata:
  name: profiles-service
spec:
  selector:
    app: profiles
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
